# rgbd_bridge

./: CMakeLists.txt  README.haha
include/rgbd_bridge/: intrinsics.h  openni.h  point_cloud_helpers.h  real_sense_common.h  real_sense_d400.h  real_sense_sr300.h  rgbd_bridge.h  rgbd_display_app.h
src/: intrinsics.cc  openni.cc  real_sense_common.cc  real_sense_d400.cc  real_sense_sr300.cc  rgbd_bridge.cc  rgbd_display_app.cc  test_real_sense.cc
